tests/bad/test_end2.pas
program test_end

begin
